--- a/LiveSplit.ASLVarViewer.UI/LiveSplit.ASLVarViewer.UI.csproj
+++ b/LiveSplit.ASLVarViewer.UI/LiveSplit.ASLVarViewer.UI.csproj
@@ -50,6 +50,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ASLEngineHook.cs" />
     <Compile Include="ASLVarViewerSettings.cs">
       <SubType>UserControl</SubType>
     </Compile>
